# strategy-bridge

./: .gitignore  main.py  pyproject.toml  run.sh
bridge/processors/: python_controller_template.py  referee_commands_collector.py  robot_commands_sender.py  vision_detections_collector.py
src/strategy_bridge/: interactive.py  main.py  runner.py
src/strategy_bridge/bus/: data_bus.py  data_reader.py  data_writer.py
src/strategy_bridge/common/: config.py
src/strategy_bridge/matlab/: engine.py
src/strategy_bridge/pb/: messages_robocup_ssl_wrapper_pb2.py
src/strategy_bridge/processors/: matlab_controller.py  python_controller_template.py  referee_commands_collector.py  robot_commands_sender.py  vision_detections_collector.py
